RESOLVED FIXED103807
[EFL] Fix build warning in GraphicsContext3DEfl.cpp
https://bugs.webkit.org/show_bug.cgi?id=103807
Summary [EFL] Fix build warning in GraphicsContext3DEfl.cpp
KyungTae Kim
Reported 2012-11-30 22:41:52 PST
Because GraphicsContext3D::ImageExtractor::extractImage is not implemented yet, comment out the parameter names for removing -Wunused-parameter warning. Source/WebCore/platform/graphics/efl/GraphicsContext3DEfl.cpp:248:6: warning: unused parameter 'premultiplyAlpha' [-Wunused-parameter] Source/WebCore/platform/graphics/efl/GraphicsContext3DEfl.cpp:248:6: warning: unused parameter 'ignoreGammaAndColorProfile' [-Wunused-parameter]
Attachments
Patch (1.59 KB, patch)
2012-11-30 22:53 PST, KyungTae Kim
no flags
KyungTae Kim
Comment 1 2012-11-30 22:53:51 PST
Laszlo Gombos
Comment 2 2012-11-30 23:04:15 PST
Comment on attachment 177091 [details] Patch r=me.
WebKit Review Bot
Comment 3 2012-12-02 04:10:24 PST
Comment on attachment 177091 [details] Patch Clearing flags on attachment: 177091 Committed r136335: <http://trac.webkit.org/changeset/136335>
WebKit Review Bot
Comment 4 2012-12-02 04:10:28 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.