[EFL] Fix build warning in GraphicsContext3DEfl.cpp https://bugs.webkit.org/show_bug.cgi?id=103807

Patch by KyungTae Kim <ktf.kim@samsung.com> on 2012-12-02
Reviewed by Laszlo Gombos.

Because GraphicsContext3D::ImageExtractor::extractImage is not implemented yet,
comment out the parameter names for removing -Wunused-parameter warnings.

* platform/graphics/efl/GraphicsContext3DEfl.cpp:
(WebCore::GraphicsContext3D::ImageExtractor::extractImage):

Canonical link: https://commits.webkit.org/121929@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136335 268f45cc-cd09-0410-ab3c-d52691b4dbfc